# dag-executor

./: .gitignore  README.md  pyproject.toml  pytest.ini
doc/uml/: dag-executor-class-diagram.mdj
src/: digraph.py  executor.py  graph.py  main.py  pipeline.py  task.py
tests/: pytest.ini  test-executor.py  test-manual.py  test-task.py  test_dag.py  test_entry_task.py  test_executor.py  test_performance.py  test_pipline.py  test_system.py  test_task.py
