[project]
name="dag_executor"
version="1.0"
description="A tool for defining and running a computation pipeline"
dependencies = [
    "numpy>=2.2.3",
    "pytest>=6.2.0"
]

[build-system]
requires=["setuptools>=61.0.0"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
where=["src"]
